--- a/geographyQuestions.html
+++ b/geographyQuestions.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <pre style="word-wrap: break-word; white-space: pre-wrap;">
-      [{"id":"0","Question":"Which of these European cities boasts three football stadiums all with a capacity of more than 50,000?
+   [{"id":"0","Question":"Which of these European cities boasts three football stadiums all with a capacity of more than 50,000?
 ","Answer":"Glasgow","SecondAnswer":"London","Difficulty":"3
 "},{"id":"1","Question":"In which county is the Daniel Alcides Carrión, the professional football stadium at the highest altitude in the world?
 ","Answer":"Peru","SecondAnswer":"Bolivia","Difficulty":"3
@@ -34,7 +34,7 @@
 "},{"id":"13","Question":"Which country hosted the 1966 FIFA World Cup?
 ","Answer":"England","SecondAnswer":"Italy","Difficulty":"3
 "},{"id":"14","Question":"Which country hosted the 1970 FIFA World Cup?
-","Answer":"Mexico","SecondAnswer":"USA","Difficulty":"3
+","Answer":"Mexico","SecondAnswer":"Usa","Difficulty":"3
 "},{"id":"15","Question":"Which country hosted the 1974 FIFA World Cup?
 ","Answer":"Germany","SecondAnswer":"France","Difficulty":"3
 "},{"id":"16","Question":"Which country hosted the 1978 FIFA World Cup?
@@ -42,13 +42,13 @@
 "},{"id":"17","Question":"Which country hosted the 1982 FIFA World Cup?
 ","Answer":"Spain","SecondAnswer":"Germany","Difficulty":"3
 "},{"id":"18","Question":"Which country hosted the 1986 FIFA World Cup?
-","Answer":"Mexico","SecondAnswer":"USA","Difficulty":"3
+","Answer":"Mexico","SecondAnswer":"Usa","Difficulty":"3
 "},{"id":"19","Question":"Which country hosted the 1990 FIFA World Cup?
 ","Answer":"Italy","SecondAnswer":"Germany","Difficulty":"3
 "},{"id":"20","Question":"Which country hosted the 1994 FIFA World Cup?
-","Answer":"USA","SecondAnswer":"France","Difficulty":"3
+","Answer":"Usa","SecondAnswer":"France","Difficulty":"3
 "},{"id":"21","Question":"Which country hosted the 1998 FIFA World Cup?
-","Answer":"France","SecondAnswer":"USA","Difficulty":"3
+","Answer":"France","SecondAnswer":"Usa","Difficulty":"3
 "},{"id":"22","Question":"Which country hosted the 2006 FIFA World Cup?
 ","Answer":"Germany","SecondAnswer":"Italy","Difficulty":"3
 "},{"id":"23","Question":"Which country hosted the 2010 FIFA World Cup?
@@ -58,7 +58,70 @@
 "},{"id":"25","Question":"Which country hosted the 2018 FIFA World Cup?
 ","Answer":"Russia","SecondAnswer":"Brazil","Difficulty":"1
 "},{"id":"26","Question":"Which country hosted the 2022 FIFA World Cup?
-","Answer":"Qatar","SecondAnswer":"Russia","Difficulty":"1"}]
+","Answer":"Qatar","SecondAnswer":"Russia","Difficulty":"1
+"},{"id":"27","Question":"What country is Quick Boys from?
+","Answer":"Netherlands","SecondAnswer":"Bolivia","Difficulty":"3
+"},{"id":"28","Question":"What is Aubameyang's nationality?
+","Answer":"Gabon","SecondAnswer":"Ghana","Difficulty":"1
+"},{"id":"29","Question":"In which stadium did the Champions League final of 1999 take place?
+","Answer":"Camp Nou","SecondAnswer":"Stade De France","Difficulty":"3
+"},{"id":"30","Question":"In which stadium did the Champions League final of 2000 take place?
+","Answer":"Stade De France","SecondAnswer":"Camp Nou","Difficulty":"3
+"},{"id":"31","Question":"In which stadium did the Champions League final of 2001 take place?
+","Answer":"San Siro","SecondAnswer":"Stade De France","Difficulty":"3
+"},{"id":"32","Question":"In which stadium did the Champions League final of 2002 take place?
+","Answer":"Hampden Park","SecondAnswer":"San Siro","Difficulty":"3
+"},{"id":"33","Question":"In which stadium did the Champions League final of 2003 take place?
+","Answer":"Old Trafford","SecondAnswer":"Hampden Park","Difficulty":"3
+"},{"id":"34","Question":"In which stadium did the Champions League final of 2004 take place?
+","Answer":"Arena AufSchalke","SecondAnswer":"Old Trafford","Difficulty":"3
+"},{"id":"35","Question":"In which stadium did the Champions League final of 2005 take place?
+","Answer":"Atatürk Olympic Stadium","SecondAnswer":"Old Trafford","Difficulty":"3
+"},{"id":"36","Question":"In which stadium did the Champions League final of 2006 take place?
+","Answer":"Stade De France","SecondAnswer":"Atatürk Olympic Stadium","Difficulty":"3
+"},{"id":"37","Question":"In which stadium did the Champions League final of 2007 take place?
+","Answer":"Olympic Stadium In Athens","SecondAnswer":"Stade De France","Difficulty":"3
+"},{"id":"38","Question":"In which stadium did the Champions League final of 2008 take place?
+","Answer":"Luzhniki Stadium","SecondAnswer":"Olympic Stadium In Athens","Difficulty":"3
+"},{"id":"39","Question":"In which stadium did the Champions League final of 2009 take place?
+","Answer":"Stadio Olimpico","SecondAnswer":"Luzhniki Stadium","Difficulty":"3
+"},{"id":"40","Question":"In which stadium did the Champions League final of 2010 take place?
+","Answer":"Santiago Bernabéu Stadium","SecondAnswer":"Stadio Olimpico","Difficulty":"3
+"},{"id":"41","Question":"In which stadium did the Champions League final of 2011 take place?
+","Answer":"Wembley Stadium","SecondAnswer":"Santiago Bernabéu Stadium","Difficulty":"3
+"},{"id":"42","Question":"In which stadium did the Champions League final of 2012 take place?
+","Answer":"Allianz Arena","SecondAnswer":"Santiago Bernabéu Stadium","Difficulty":"3
+"},{"id":"43","Question":"In which stadium did the Champions League final of 2013 take place?
+","Answer":"Allianz Arena","SecondAnswer":"Wembley Stadium","Difficulty":"3
+"},{"id":"44","Question":"In which stadium did the Champions League final of 2014 take place?
+","Answer":"The Estádio Da Luz","SecondAnswer":"Wembley Stadium","Difficulty":"3
+"},{"id":"45","Question":"In which stadium did the Champions League final of 2015 take place?
+","Answer":"The Olympiastadion","SecondAnswer":"Wembley Stadium","Difficulty":"3
+"},{"id":"46","Question":"In which stadium did the Champions League final of 2016 take place?
+","Answer":"San Siro","SecondAnswer":"Allianz Arena","Difficulty":"3
+"},{"id":"47","Question":"In which stadium did the Champions League final of 2017 take place?
+","Answer":"Millennium Stadium","SecondAnswer":"San Siro","Difficulty":"3
+"},{"id":"48","Question":"In which stadium did the Champions League final of 2018 take place?
+","Answer":"Olimpiyskiy Stadium In Kyiv","SecondAnswer":"San Siro","Difficulty":"3
+"},{"id":"49","Question":"In which stadium did the Champions League final of 2019 take place?
+","Answer":"Metropolitano Stadium","SecondAnswer":"Allianz Arena","Difficulty":"3
+"},{"id":"50","Question":"In which stadium did the Champions League final of 2020 take place?
+","Answer":"The Estádio Da Luz","SecondAnswer":"Allianz Arena","Difficulty":"3
+"},{"id":"51","Question":"In which stadium did the Champions League final of 2021 take place?
+","Answer":"The Estádio Do Dragão","SecondAnswer":"Allianz Arena","Difficulty":"3
+"},{"id":"52","Question":"In which stadium did the Champions League final of 2022 take place?
+","Answer":"Stade De France","SecondAnswer":"The Estádio Do Dragão","Difficulty":"3
+"},{"id":"53","Question":"In which stadium did the Champions League final of 2023 take place?
+","Answer":"Atatürk Olympic Stadium","SecondAnswer":"Metropolitano Stadium","Difficulty":"3
+"},{"id":"54","Question":"What country is the Heracles Almelo team from?
+","Answer":"Netherlands","SecondAnswer":"Greece","Difficulty":"1
+"},{"id":"55","Question":"What country does Raheem Sterling come from?
+","Answer":"Jamaica","SecondAnswer":"Senegal","Difficulty":"2
+"},{"id":"56","Question":"What country is the Deportivo Saprissa team from?
+","Answer":"Costa Rica","SecondAnswer":"Ecuador","Difficulty":"3
+"},{"id":"57","Question":"What country is the Akropolis IF in?
+","Answer":"Sweden","SecondAnswer":"Greece","Difficulty":"3"}]
+
     </pre>
       
     <div id="speechify-global-notifications"></div>
