--- a/top5Questions.html
+++ b/top5Questions.html
@@ -5,12 +5,23 @@
   </head>
   <body>
     <pre style="word-wrap: break-word; white-space: pre-wrap;">
-        [{"id":"0","Question":"Top 5 players with the most appearances in el clasico
+    [{"id":"0","Question":"Top 5 players with the most appearances in el clasico
 ","Answer":"Sergio Busquets-Sergio Ramos-Lionel Messi-Manuel Sanchis-Francisco Gento","SecondAnswer":"None","Difficulty":"3
 "},{"id":"1","Question":"Top 5 coaches with the most appearances
 ","Answer":"Alex Ferguson-Vanderlei Luxemburgo-Graham Turner-Arsene Wenger-Bill Struth","SecondAnswer":"None","Difficulty":"3
 "},{"id":"2","Question":"Top 5 coaches with the most trophies
-","Answer":"Alex Ferguson-Pep Guardiola-Mircea Lucescu-Valeriy Lobanovskyi-Otmar Hitzfeld","SecondAnswer":"None","Difficulty":"3"}]
+","Answer":"Alex Ferguson-Pep Guardiola-Mircea Lucescu-Valeriy Lobanovskyi-Otmar Hitzfeld","SecondAnswer":"None","Difficulty":"3
+"},{"id":"3","Question":"Top 5 teams with the most Champions League/European Cup titles
+","Answer":"Real Madrid-Milan-Liverpool-Bayern Munich-Barcelona","SecondAnswer":"None","Difficulty":"3
+"},{"id":"4","Question":"Top 5 players with the most appearances in the Premier League
+","Answer":"Gareth Barry-Ryan Giggs-James Milner-Frank Lampard-David James","SecondAnswer":"None","Difficulty":"3
+"},{"id":"5","Question":"Top 5 players with the most goals in the Premier League
+","Answer":"Alan Shearer","SecondAnswer":"Harry Kane","Difficulty":"Wayne Rooney"},{"id":"6","Question":"Top 5 players with the most assist in the Premier League
+","Answer":"Ryan Giggs-Cesc Fàbregas-Wayne Rooney-Frank Lampard-Kevin De Brune","SecondAnswer":"None","Difficulty":"3
+"},{"id":"7","Question":"Top 5 players with the most clean sheets in the Premier League
+","Answer":"Petr Cech-David James-Mark Schwarzer-David de Gea-David Seaman","SecondAnswer":"None","Difficulty":"3
+"},{"id":"8","Question":"Top 5 teams with the most Ligue 1(French championship) titles
+","Answer":"Saint Etienne-Olympique De Marseille-Paris Saint Germain-Monaco-Nantes","SecondAnswer":"None","Difficulty":"3"}]    
     </pre>
       
     <div id="speechify-global-notifications"></div>
