--- a/playerIdQuestions.html
+++ b/playerIdQuestions.html
@@ -6,14 +6,24 @@
   <body>
     <pre style="word-wrap: break-word; white-space: pre-wrap;">
 
-[{"id":"0","Question":"1994-1996\n\n1996-2002\n\n1999\n\n2002-2004\n\n2004-2007\n\n2007-2010\n\n2010-2011\n\n2011,Cruzeiro\n\nSao Paolo\n\nAtletico Mineiro(loan)\n\nVillarreal\n\nBarcelona\n\nChelsea\n\nFluminense\n\nCeara
+[{"id":"0","Question":"1994-1996\n\n1996-2002\n\n1999\n\n2002-2004\n\n2004-2007\n\n2007-2010\n\n2010-2011\n\n2011~Cruzeiro\n\nSao Paolo\n\nAtletico Mineiro(loan)\n\nVillarreal\n\nBarcelona\n\nChelsea\n\nFluminense\n\nCeara
 ","Answer":"Juliano Belleti","SecondAnswer":"Oleguer","Difficulty":"2
-"},{"id":"1","Question":"2005-2006\n\n2006\n\n2007\n\n2007-2008\n\n2008-2015\n\n2015-2018\n\n2018-2023\n\n2023-,Manchester United\n\nSunderland(loan)\n\nRoyal Antwerp(loan)\n\nSunderland(loan)\n\nManchester United\n\nWest Bromwich Albion\n\nLeicester City\n\nManchester United
+"},{"id":"1","Question":"2005-2006\n\n2006\n\n2007\n\n2007-2008\n\n2008-2015\n\n2015-2018\n\n2018-2023\n\n2023-~Manchester United\n\nSunderland(loan)\n\nRoyal Antwerp(loan)\n\nSunderland(loan)\n\nManchester United\n\nWest Bromwich Albion\n\nLeicester City\n\nManchester United
 ","Answer":"Jonny Evans","SecondAnswer":"Harry Maguire","Difficulty":"2
-"},{"id":"2","Question":"2017-2018\n\n2017-2018\n\n2018-2020\n\n2020-2021\n\n2021-,FC Porto B\n\nFC Porto\n\nManchester United\n\nMilan(loan)\n\nManchester United
+"},{"id":"2","Question":"2017-2018\n\n2017-2018\n\n2018-2020\n\n2020-2021\n\n2021-~FC Porto B\n\nFC Porto\n\nManchester United\n\nMilan(loan)\n\nManchester United
 ","Answer":"Diogo Dalot","SecondAnswer":"Bruno Fernandes","Difficulty":"2
-"},{"id":"3","Question":"2009-2013\n\n2013-2020\n\n2020-2021\n\n2022\n\n2022-,Ajax\n\nTottenham Hotspur\n\nInter\n\nBrentford\n\nManchester United
-","Answer":"Christian Eriksen","SecondAnswer":"Victor Nilsson Lindelof","Difficulty":"2"}]
+"},{"id":"3","Question":"2009-2013\n\n2013-2020\n\n2020-2021\n\n2022\n\n2022-~Ajax\n\nTottenham Hotspur\n\nInter\n\nBrentford\n\nManchester United
+","Answer":"Christian Eriksen","SecondAnswer":"Victor Nilsson Lindelof","Difficulty":"2
+"},{"id":"4","Question":"2009-2010\n\n2011\n\n2011-2021\n\n2021-~Bayern Munich\n\nHoffenheim(loan)\n\nBayern Munich\n\nReal Madrid
+","Answer":"David Alaba","SecondAnswer":"Antinio Rudiger","Difficulty":"2
+"},{"id":"5","Question":"2013-2017\n\n2017-2019\n\n2019-~Le Havre\n\nLyon\n\nReal Madrid
+","Answer":"Ferland Mendy","SecondAnswer":"Eduardo Camavinga","Difficulty":"2
+"},{"id":"6","Question":"2007-2009\n\n2009\n\n2009-2011\n\n2011-2013\n\n2013-2015\n\n2015-2019\n\n2019-2020\n\n2020-2022\n\n2022-~Sochaux\n\nRoeselare(loan)\n\nClub Brugge\n\nBorussia Dortmund\n\nWolfsburg\n\nInter\n\nBayern Munich(loan)\n\nInter\n\nTottenham Hotspur
+","Answer":"Ivan Perisic","SecondAnswer":"Pierre Emile Hojbjerg","Difficulty":"2
+"},{"id":"7","Question":"2002-2003\n\n2003\n\n2003-2004\n\n2004-2005\n\n2005-2006\n\n2006-2008\n\n2008-2010\n\n2010-2015\n\n2015-2023\n\n2023-~Leeds United\n\nSwindon Town(loan)\n\nLeeds United\n\nNewcastle United\n\nAston Villa(loan)\n\nNewcastle United\n\nAston Villa\n\nMancheter City\n\nLiverpool\n\nBrighton & Hove Albion
+","Answer":"James Milner","SecondAnswer":"Adam Lallana","Difficulty":"2
+"},{"id":"8","Question":"2006-2007\n\n2007-2013\n\n2013\n\n2013-2020\n\n2020-2021\n\n2021-2022\n\n2022-~Corinthians\n\nShakhtar Donetsk\n\nAnzhi Makhachkala\n\nChelsea\n\nArsenal\n\nCorinthians\n\nFulham
+","Answer":"Willian","SecondAnswer":"Andreas Pereira","Difficulty":"2"}]
   
     </pre>
       
