--- a/gossipQuestions.html
+++ b/gossipQuestions.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <pre style="word-wrap: break-word; white-space: pre-wrap;">
-         [{"id":"0","Question":"Which team the singer Rihanna supports?
+       [{"id":"0","Question":"Which team the singer Rihanna supports?
 ","Answer":"Juventus","SecondAnswer":"PSG","Difficulty":"2
 "},{"id":"1","Question":"Which player was known as 'Il Divin Codino' (The Divine Ponytail)?
 ","Answer":"Roberto Baggio","SecondAnswer":"Ronaldinho","Difficulty":"2
@@ -24,7 +24,15 @@
 "},{"id":"8","Question":"English rock star Elton John was twice the owner of which football club?
 ","Answer":"Watford","SecondAnswer":"Liverpool","Difficulty":"2
 "},{"id":"9","Question":"Rangers tried to sign which player after Alex McLeish was alerted to his ability through popular video game Football Manager?
-","Answer":"Lionel Messi","SecondAnswer":"Dele Alli","Difficulty":"1"}]
+","Answer":"Lionel Messi","SecondAnswer":"Dele Alli","Difficulty":"1
+"},{"id":"10","Question":"How many kids does David Beckham have?
+","Answer":"4","SecondAnswer":"3","Difficulty":"2
+"},{"id":"11","Question":"What is the name of Cristiano Ronaldo's wife?
+","Answer":"Georgina Rodríguez","SecondAnswer":"Irina Shayk","Difficulty":"1
+"},{"id":"12","Question":"Which team did actor Ryan Reynolds buy?
+","Answer":"Wrexham","SecondAnswer":"Swansea City","Difficulty":"1
+"},{"id":"13","Question":"Which former Manchester United footballer has been involved in a love scandal for having a secret affair with his brother's wife?
+","Answer":"Ryan Giggs","SecondAnswer":"Eric Cantona","Difficulty":"1"}]
     </pre>
       
     <div id="speechify-global-notifications"></div>
