--- a/logoQuizQuestions.html
+++ b/logoQuizQuestions.html
@@ -5,12 +5,40 @@
   </head>
   <body>
     <pre style="word-wrap: break-word; white-space: pre-wrap;">
-
-
-[{"id":"0","Question":"https://alexpaps.github.io/supersimple-website/images/barcelona_img.png
-","Answer":"Barcelona","SecondAnswer":"Espanyol","Difficulty":"1
-"},{"id":"1","Question":"https://alexpaps.github.io/supersimple-website/images/birmingham.png
-","Answer":"Birmingham","SecondAnswer":"Blackburn","Difficulty":"2"}]
+[{"id":"0","Question":"https://alexpaps.github.io/supersimple-website/images/birmingham.png
+","Answer":"Birmingham","SecondAnswer":"Blackburn","Difficulty":"1
+"},{"id":"1","Question":"https://alexpaps.github.io/supersimple-website/images/sheffield_wednesday.png
+","Answer":"Sheffield Wednesday","SecondAnswer":"Sunderland","Difficulty":"1
+"},{"id":"2","Question":"https://alexpaps.github.io/supersimple-website/images/rotherham_united.png
+","Answer":"Rotherham United","SecondAnswer":"Coventry City","Difficulty":"1
+"},{"id":"3","Question":"https://alexpaps.github.io/supersimple-website/images/rotherham_united.png
+","Answer":"Plymouth Argyle","SecondAnswer":"Coventry City","Difficulty":"1
+"},{"id":"4","Question":"https://alexpaps.github.io/supersimple-website/images/ipswich_town.png
+","Answer":"Ipswich Town","SecondAnswer":"Rotherham United","Difficulty":"1
+"},{"id":"5","Question":"https://alexpaps.github.io/supersimple-website/images/portsmouth.png
+","Answer":"Portsmouth","SecondAnswer":"Oxford United","Difficulty":"2
+"},{"id":"6","Question":"https://alexpaps.github.io/supersimple-website/images/oxford_united.png
+","Answer":"Oxford United","SecondAnswer":"Portsmouth","Difficulty":"2
+"},{"id":"7","Question":"https://alexpaps.github.io/supersimple-website/images/bolton_wanderers.png
+","Answer":"Bolton Wanderers","SecondAnswer":"Oxford United","Difficulty":"2
+"},{"id":"8","Question":"https://alexpaps.github.io/supersimple-website/images/peterborough_united.png
+","Answer":"Peterborough United","SecondAnswer":"Oxford United","Difficulty":"1
+"},{"id":"9","Question":"https://alexpaps.github.io/supersimple-website/images/stevenage.png
+","Answer":"Stevenage","SecondAnswer":"Oxford United","Difficulty":"2
+"},{"id":"10","Question":"https://alexpaps.github.io/supersimple-website/images/lincoln_city.png
+","Answer":"Lincoln City","SecondAnswer":"Peterborough United","Difficulty":"2
+"},{"id":"11","Question":"https://alexpaps.github.io/supersimple-website/images/wycombe_wanderers.png
+","Answer":"Wycombe Wanderers","SecondAnswer":"Lincoln City","Difficulty":"2
+"},{"id":"12","Question":"https://alexpaps.github.io/supersimple-website/images/northampton_town.png
+","Answer":"Northampton Town","SecondAnswer":"Wycombe Wanderers","Difficulty":"2
+"},{"id":"13","Question":"https://alexpaps.github.io/supersimple-website/images/racing_de_ferrol.png
+","Answer":"Racing De Ferrol","SecondAnswer":"Racing De Santander","Difficulty":"2
+"},{"id":"14","Question":"https://alexpaps.github.io/supersimple-website/images/tenerife.png
+","Answer":"Tenerife","SecondAnswer":"Elche","Difficulty":"1
+"},{"id":"15","Question":"https://alexpaps.github.io/supersimple-website/images/racing_de_santander.png
+","Answer":"Racing De Santander","SecondAnswer":"Racing De Ferrol","Difficulty":"2
+"},{"id":"16","Question":"https://alexpaps.github.io/supersimple-website/images/eldense.png
+","Answer":"Eldense","SecondAnswer":"Racing De Ferrol","Difficulty":"2"}]
     </pre>
       
     <div id="speechify-global-notifications"></div>
