--- a/top5Questions.html
+++ b/top5Questions.html
@@ -17,7 +17,7 @@
 ","Answer":"Gareth Barry-Ryan Giggs-James Milner-Frank Lampard-David James","SecondAnswer":"None","Difficulty":"3
 "},{"id":"5","Question":"Top 5 players with the most goals in the Premier League
 ","Answer":"Alan Shearer","SecondAnswer":"Harry Kane","Difficulty":"Wayne Rooney"},{"id":"6","Question":"Top 5 players with the most assist in the Premier League
-","Answer":"Ryan Giggs-Cesc Fàbregas-Wayne Rooney-Frank Lampard-Kevin De Brune","SecondAnswer":"None","Difficulty":"3
+","Answer":"Ryan Giggs-Cesc Fabregas-Wayne Rooney-Frank Lampard-Kevin De Brune","SecondAnswer":"None","Difficulty":"3
 "},{"id":"7","Question":"Top 5 players with the most clean sheets in the Premier League
 ","Answer":"Petr Cech-David James-Mark Schwarzer-David de Gea-David Seaman","SecondAnswer":"None","Difficulty":"3
 "},{"id":"8","Question":"Top 5 teams with the most Ligue 1(French championship) titles
